@@ -33,7 +33,6 @@ X_AC_META
 AC_CONFIG_AUX_DIR([config])
 AC_CONFIG_SRCDIR([src/libmunge/munge.h])
 X_AC_CANONICAL
-X_AC_GPL_LICENSED
 X_AC_HUMOR
 X_AC_EXPAND_INSTALL_DIRS
 
