@@ -1,5 +1,10 @@
 2010-02-11  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* configure.ac, config/x_ac_gpl_licensed.m4: Removed X_AC_GPL_LICENSED.
+	* src/libmunge/munge.h: Removed #error if !GPL_LICENSED.
+	* src/libmunge/munge.3.in, src/libmunge/munge_ctx.3.in,
+	  src/libmunge/munge_enum.3.in: Removed references to GPL_LICENSED.
+
 	* configure.ac: Added check for struct ucred in <sys/socket.h>.
 	* src/libcommon/auth_policy.h: Added test for HAVE_STRUCT_UCRED to
 	  MUNGE_AUTH_SO_PEERCRED client authentication check.
